--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -12,6 +12,8 @@ login page
 <form action="/loginProc" method="post" name="loginForm">
     <input id="username" type="text" name="username" placeholder="id"/>
     <input id="password" type="password" name="password" placeholder="password"/>
+<!--    csrf 토큰을 가지는 input-->
+<!--    <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>-->
     <input type="submit" value="login"/>
 </form>
 </body>
